// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPageHeader /> renders correctly with a non authenticated user 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "eventId": "",
        "isAuthenticated": false,
      }
    }
  />
</Fragment>
`;

exports[`<EventPageHeader /> renders correctly with the create event feature toggle set to true 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "eventId": "",
        "isAuthenticated": true,
      }
    }
  />
</Fragment>
`;

exports[`<EventPageHeader /> renders correctly without title 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "eventId": "",
        "isAuthenticated": true,
      }
    }
  />
</Fragment>
`;

exports[`<EventPageHeader /> renders correcty 1`] = `
<<<<<<< HEAD
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "eventId": "",
        "isAuthenticated": true,
      }
    }
  />
</Fragment>
=======
<div
  className="container text-center"
>
  <h1
    className="m-0"
  >
    <FormattedHTMLMessage
      id="<p>Titre personnalisé</p>"
      tagName="span"
      values={Object {}}
    />
  </h1>
</div>
>>>>>>> [7903] upgrade to intl3
`;
